contact_table created

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ DB_PASSWORD =
 DB_DATABASE= stellar_contacts
 DB_PORT = 3306
 DB_HOSTNAME = localhost
+
+
+JWT_KEY=tringorarrayusedforsigningcookies
+PORT=8000
